--- a/datakit.yaml.template
+++ b/datakit.yaml.template
@@ -152,6 +152,8 @@ spec:
           value: stdout
         - name: ENV_HTTP_LISTEN
           value: 0.0.0.0:9529
+        #- name: ENV_IPDB
+        #  value: iploc
         image: pubrepo.jiagouyun.com/datakit/datakit:{{.Version}}
         imagePullPolicy: Always
         name: datakit
@@ -177,6 +179,8 @@ spec:
           name: rootfs
         - mountPath: /sys/kernel/debug
           name: debugfs
+        # - mountPath: /usr/local/datakit/data/ipdb/iploc/
+        #   name: datakit-ipdb
         #- mountPath: /usr/local/datakit/conf.d/db/mysql.conf
         #  name: datakit-conf
         #  subPath: mysql.conf
@@ -186,6 +190,19 @@ spec:
         #  subPath: redis.conf
         #  readOnly: true
         workingDir: /usr/local/datakit
+      # initContainers:
+      #   - args:
+      #       - tar -xf /opt/iploc.tar.gz -C /usr/local/datakit/data/ipdb/iploc/
+      #     command:
+      #       - bash
+      #       - -c
+      #     image: pubrepo.jiagouyun.com/datakit/iploc:1.0
+      #     imagePullPolicy: IfNotPresent
+      #     name: init-volume
+      #     resources: {}
+      #     volumeMounts:
+      #       - mountPath: /usr/local/datakit/data/ipdb/iploc/
+      #         name: datakit-ipdb
       hostIPC: true
       hostPID: true
       restartPolicy: Always
@@ -218,6 +235,8 @@ spec:
       - hostPath:
           path: /sys/kernel/debug
         name: debugfs
+      # - emptyDir: {}
+      #   name: datakit-ipdb
   updateStrategy:
     rollingUpdate:
       maxUnavailable: 1
