--- a/install.ps1.template
+++ b/install.ps1.template
@@ -222,6 +222,12 @@ if ($x -ne $null) {
 	Write-COutput yellow "* set pprof listen address"
 }
 
+$install_log="install.log"
+$x = [Environment]::GetEnvironmentVariable("DK_INSTALL_LOG")
+if ($x -ne $null) {
+	$install_log = $x
+	Write-COutput yellow "* set install log"
+}
 
 $git_url=""
 $x = [Environment]::GetEnvironmentVariable("DK_GIT_URL")
@@ -413,9 +419,9 @@ if ($proxy -ne "") {
 Invoke-Expression $dl_installer_action
 
 if ($upgrade -ne $null) { # upgrade
-	$action = "$installer -upgrade --proxy=${proxy} --installer_base_url=${installer_base_url} --enable-experimental=${enable_experimental}"
+	$action = "$installer --install-log=${install_log} --upgrade --proxy=${proxy} --installer_base_url=${installer_base_url} --enable-experimental=${enable_experimental}"
 } else { # install new datakit
-	$action = "$installer --dataway=$dataway --listen=$http_listen --installer_base_url=${installer_base_url} --port=${http_port} --proxy=${proxy} --namespace=${namespace} --env_hostname=${env_hostname} --cloud-provider=${cloud_provider} --global-host-tags='${global_host_tags}' --global-election-tags='${global_election_tags}' --dca-enable=$dca_enable --dca-listen=$dca_listen --dca-white-list=$dca_white_list --git-url='${git_url}' --git-key-path='${git_key_path}' --git-key-pw='${git_key_pw}' --git-branch='${git_branch}' --git-pull-interval='${git_pull_interval}' --install-only='${install_only}' --enable-election='${enable_election}' --rum-origin-ip-header='${rum_origin_ip_header}' --disable-404page='${disable_404page}' --log-level='${log_level}' --log='${log}' --gin-log='${gin_log}' --ipdb-type='${ipdb_type}' --enable-pprof='${enable_pprof}' --pprof-listen='${pprof_listen}' --sink-metric='${sink_metric}' --sink-network='${sink_network}' --sink-keyevent='${sink_keyevent}' --sink-object='${sink_object}' --sink-custom-object='${sink_custom_object}' --sink-logging='${sink_logging}' --sink-tracing='${sink_tracing}' --sink-rum='${sink_rum}' --sink-security='${sink_security}' --sink-profile='${sink_profile}' --log-sink-detail='${log_sink_detail}'"
+	$action = "$installer --install-log=${install_log} --dataway=$dataway --listen=$http_listen --installer_base_url=${installer_base_url} --port=${http_port} --proxy=${proxy} --namespace=${namespace} --env_hostname=${env_hostname} --cloud-provider=${cloud_provider} --global-host-tags='${global_host_tags}' --global-election-tags='${global_election_tags}' --dca-enable=$dca_enable --dca-listen=$dca_listen --dca-white-list=$dca_white_list --git-url='${git_url}' --git-key-path='${git_key_path}' --git-key-pw='${git_key_pw}' --git-branch='${git_branch}' --git-pull-interval='${git_pull_interval}' --install-only='${install_only}' --enable-election='${enable_election}' --rum-origin-ip-header='${rum_origin_ip_header}' --disable-404page='${disable_404page}' --log-level='${log_level}' --log='${log}' --gin-log='${gin_log}' --ipdb-type='${ipdb_type}' --enable-pprof='${enable_pprof}' --pprof-listen='${pprof_listen}' --sink-metric='${sink_metric}' --sink-network='${sink_network}' --sink-keyevent='${sink_keyevent}' --sink-object='${sink_object}' --sink-custom-object='${sink_custom_object}' --sink-logging='${sink_logging}' --sink-tracing='${sink_tracing}' --sink-rum='${sink_rum}' --sink-security='${sink_security}' --sink-profile='${sink_profile}' --log-sink-detail='${log_sink_detail}'"
 }
 
 Write-COutput green "action: $action"
