--- a/install.ps1.template
+++ b/install.ps1.template
@@ -155,13 +155,6 @@ if ($x -ne $null) {
     Write-COutput green "* set hostname to $x"
 }
 
-$enable_experimental="0"
-$x = [Environment]::GetEnvironmentVariable("DK_ENABLE_EXPEIMENTAL")
-if ($x -ne $null) {
-    $enable_experimental=$x
-    Write-COutput green "* set enable_experimental to $x"
-}
-
 $global_host_tags=""
 $x = [Environment]::GetEnvironmentVariable("DK_GLOBAL_HOST_TAGS") 
 if ($x -ne $null) {
@@ -548,7 +541,7 @@ if ($proxy -ne "") {
 Invoke-Expression $dl_installer_action
 
 if ($upgrade -ne $null) { # upgrade
-	$action = "$installer --install-log=${install_log} --upgrade --proxy=${proxy} --installer_base_url=${installer_base_url} --enable-experimental=${enable_experimental}"
+	$action = "$installer --install-log=${install_log} --upgrade --proxy=${proxy} --installer_base_url=${installer_base_url}"
 } else { # install new datakit
 	$action = "$installer --install-log=${install_log} --dataway=$dataway --listen=$http_listen --installer_base_url=${installer_base_url} --port=${http_port} --proxy=${proxy} --namespace=${namespace} --env_hostname=${env_hostname} --cloud-provider=${cloud_provider} --global-host-tags='${global_host_tags}' --global-election-tags='${global_election_tags}' --dca-enable=$dca_enable --dca-listen=$dca_listen --dca-white-list=$dca_white_list --confd-backend='${confd_backend}' --confd-auth-token='${confd_auth_token}' --confd-auth-type='${confd_auth_type}' --confd-basic-auth='${confd_basic_auth}' --confd-client-ca-keys='${confd_client_ca_keys}' --confd-client-cert='${confd_client_cert}' --confd-client-key='${confd_client_key}' --confd-client-insecure='${confd_client_insecure}' --confd-backend-nodes='${confd_backend_nodes}' --confd-password='${confd_password}' --confd-scheme='${confd_scheme}' --confd-table='${confd_table}' --confd-separator='${confd_separator}' --confd-username='${confd_username}' --confd-app-id='${confd_app_id}' --confd-user-id='${confd_user_id}' --confd-role-id='${confd_role_id}' --confd-secret-id='${confd_secret_id}' --confd-filter='${confd_filter}' --confd-path='${confd_path}' --confd-role='${confd_role}' --git-url='${git_url}' --git-key-path='${git_key_path}' --git-key-pw='${git_key_pw}' --git-branch='${git_branch}' --git-pull-interval='${git_pull_interval}' --install-only='${install_only}' --enable-election='${enable_election}' --rum-origin-ip-header='${rum_origin_ip_header}' --disable-404page='${disable_404page}' --log-level='${log_level}' --log='${log}' --gin-log='${gin_log}' --ipdb-type='${ipdb_type}' --enable-pprof='${enable_pprof}' --pprof-listen='${pprof_listen}' --sink-metric='${sink_metric}' --sink-network='${sink_network}' --sink-keyevent='${sink_keyevent}' --sink-object='${sink_object}' --sink-custom-object='${sink_custom_object}' --sink-logging='${sink_logging}' --sink-tracing='${sink_tracing}' --sink-rum='${sink_rum}' --sink-security='${sink_security}' --sink-profile='${sink_profile}' --log-sink-detail='${log_sink_detail}'"
 }
