--- a/charts/datakit/charts/kube-state-metrics/values.yaml
+++ b/charts/datakit/charts/kube-state-metrics/values.yaml
@@ -76,9 +76,9 @@ serviceAccount:
 ## @param image.pullSecrets Specify docker-registry secret names as an array
 ##
 image:
-  registry: docker.io
-  repository: bitnami/kube-state-metrics
-  tag: 2.4.2-debian-10-r42
+  registry: pubrepo.guance.com
+  repository: googleimages/kube-state-metrics
+  tag: v2.5.0
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
   ## ref: https://kubernetes.io/docs/user-guide/images/#pre-pulling-images
