--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -152,6 +152,6 @@ kubeStateMetricsEnabled: true
 
 ## If true, deploys the metrics-server deployment.
 ## ref: https://github.com/kubernetes-sigs/metrics-server/tree/master/charts/metrics-server
-MetricsServerEnabled: true
+MetricsServerEnabled: false
 
 
