--- a/internal/prom/_test/prom.conf
+++ b/internal/prom/_test/prom.conf
@@ -5,67 +5,67 @@
 		"istiod.txt"
 	]
 
-  # 忽略对 url 的请求错误
+  # Ignore URL request errors.
   ignore_req_err = false
 
-  # 采集器别名
+  ## Collector alias.
   source = "prom"
 
-  # 采集数据输出源
-  # 配置此项，可以将采集到的数据写到本地文件而不将数据打到中心
-  # 之后可以直接用 datakit --prom-conf /path/to/this/conf 命令对本地保存的指标集进行调试
-  # 如果已经将 url 配置为本地文件路径，则 --prom-conf 优先调试 output 路径的数据
+  ## Collect data output.
+  # Fill this when want to collect the data to local file nor center.
+  # After filling, could use 'datakit --prom-conf /path/to/this/conf' to debug local storage measurement set.
+  # Using '--prom-conf' when priority debugging data in 'output' path.
   # output = "/abs/path/to/file"
 
-  # 采集数据大小上限，单位为字节
-  # 将数据输出到本地文件时，可以设置采集数据大小上限
-  # 如果采集数据的大小超过了此上限，则采集的数据将被丢弃
-  # 采集数据大小上限默认设置为32MB
+  ## Collect data upper limit as bytes.
+  # Only avaliable when set output to local file.
+  # If collect data exceeded the limit, the data would be dropped.
+  # Default is 32MB.
   # max_file_size = 0
 
-  # 指标类型过滤, 可选值为 counter, gauge, histogram, summary, untyped
-  # 默认只采集 counter 和 gauge 类型的指标
-  # 如果为空，则不进行过滤
+  ## Metrics type whitelist. Optional: counter, gauge, histogram, summary
+  # Default only collect 'counter' and 'gauge'.
+  # Collect all if empty.
   metric_types = ["counter", "gauge"]
 
-  # 指标名称筛选：符合条件的指标将被保留下来
-  # 支持正则，可以配置多个，即满足其中之一即可
-  # 如果为空，则不进行筛选，所有指标均保留
+  ## Metrics name whitelist.
+  # Regex supported. Multi supported, conditions met when one matched.
+  # Collect all if empty.
   # metric_name_filter = ["cpu"]
 
-  # 指标集名称前缀
-  # 配置此项，可以给指标集名称添加前缀
+  ## Measurement prefix.
+  # Add prefix to measurement set name.
   measurement_prefix = ""
 
-  # 指标集名称
-  # 默认会将指标名称以下划线"_"进行切割，切割后的第一个字段作为指标集名称，剩下字段作为当前指标名称
-  # 如果配置measurement_name, 则不进行指标名称的切割
-  # 最终的指标集名称会添加上measurement_prefix前缀
+  ## Measurement name.
+  # If measurement_name is empty, split metric name by '_', the first field after split as measurement set name, the rest as current metric name.
+  # If measurement_name is not empty, using this as measurement set name.
+  # Always add 'measurement_prefix' prefix at last.
   # measurement_name = "prom"
 
-  # 采集间隔 "ns", "us" (or "µs"), "ms", "s", "m", "h"
+  ## Collect interval, support "ns", "us" (or "µs"), "ms", "s", "m", "h".
   interval = "10s"
 
-  # TLS 配置
+  ## TLS configuration.
   tls_open = false
   # tls_ca = "/tmp/ca.crt"
   # tls_cert = "/tmp/peer.crt"
   # tls_key = "/tmp/peer.key"
 
-  # 过滤 tags, 可配置多个tag
-  # 匹配的 tag 将被忽略，但对应的数据仍然会上报上来
+  # Ignore tags. Multi supported.
+  # The matched tags would be dropped, but the item would still be sent.
   # tags_ignore = ["xxxx"]
 
-  # 自定义认证方式，目前仅支持 Bearer Token
-  # token 和 token_file: 仅需配置其中一项即可
+  ## Customize authentification. For now support Bearer Token only.
+  # Filling in 'token' or 'token_file' is acceptable.
   # [inputs.prom.auth]
   # type = "bearer_token"
   # token = "xxxxxxxx"
   # token_file = "/tmp/token"
 
-  # 自定义指标集名称
-  # 可以将包含前缀 prefix 的指标归为一类指标集
-  # 自定义指标集名称配置优先 measurement_name 配置项
+  ## Customize measurement set name.
+  # Treat those metrics with prefix as one set.
+  # Prioritier over 'measurement_name' configuration.
   #[[inputs.prom.measurements]]
   #  prefix = "cpu_"
   #  name = "cpu"
@@ -74,12 +74,12 @@
   # prefix = "mem_"
   # name = "mem"
 
-  # 对于匹配如下 tag 相关的数据，丢弃这些数据不予采集
+  # Not collecting those data when tag matched.
 	[inputs.prom.ignore_tag_kv_match]
 		destination_service = [ ".*"]
 		#grpc_service = [".*"]
 
-  # 重命名 prom 数据中的 tag key
+  # Rename tag key in prom data.
 	[inputs.prom.tags_rename]
 		overwrite_exist_tags = false
 		[inputs.prom.tags_rename.mapping]
@@ -87,7 +87,7 @@
 			# tag2 = "new-name-2"
 			# tag3 = "new-name-3"
 
-  # 自定义Tags
+  ## Customize tags.
   [inputs.prom.tags]
   # some_tag = "some_value"
   # more_tag = "some_other_value"
