--- a/man/docs/mkdocs-en.yml
+++ b/man/docs/mkdocs-en.yml
@@ -1,5 +1,6 @@
-site_name: DataKit 文档
-docs_dir: './docs/zh'
+site_name: DataKit Documents
+docs_dir: './docs/en'
+site_dir: './site/en'
 
 theme:
   palette:
@@ -8,7 +9,7 @@ theme:
   custom_dir: overrides/
   #favicon: assets/images/favicon.ico
   #logo: assets/images/logo.png
-  language: zh
+  language: en
   font:
     text: Roboto
     code: Roboto Mono
@@ -51,6 +52,18 @@ markdown_extensions:
       custom_icons:
         - overrides/.icons
 
+copyright: '&copy; 2013-2022 上海观测未来信息技术有限公司 <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31011502010862" target="_blank">沪公网安备 31011502010862号</a> | <a href="https://beian.miit.gov.cn/" target="_blank">沪ICP备 13034243号-30</a>'
+
+extra:
+  generator: false
+  homepage: https://localhost:8000/en
+  alternate:
+    - name: 中文
+      link: /
+      lang: zh
+    - name: English
+      link: /en/
+      lang: en
 plugins:
   awesome-pages: {}
   section-index: {}
@@ -60,7 +73,7 @@ plugins:
   #  enable_creation_date: true
   #  fallback_to_build_date: true
   search:
-    separator: '[\s\u200b\-]'
+    separator: 'en'
 
 #extra_css:
 #  - assets/stylesheets/extra.css
