--- a/install.ps1.template
+++ b/install.ps1.template
@@ -518,20 +518,124 @@ if ($proxy -ne "") {
 Invoke-Expression $dl_installer_action
 
 if ($upgrade -ne $null) { # upgrade
-	$action = "$installer --install-log=${install_log} --upgrade --proxy=${proxy} --installer_base_url=${installer_base_url}"
+	$action = @(
+			"$installer",
+			"--upgrade",
+			"--install-log='${install_log}'",
+			"--proxy='${proxy}'",
+			"--installer_base_url='${installer_base_url}'"
+			)
 } else { # install new datakit
-	$action = "$installer --enable-inputs=${def_inputs} --install-log=${install_log} --dataway=$dataway --listen=$http_listen --installer_base_url=${installer_base_url} --port=${http_port} --proxy=${proxy} --namespace=${namespace} --env_hostname=${env_hostname} --cloud-provider=${cloud_provider} --global-host-tags='${global_host_tags}' --global-election-tags='${global_election_tags}' --dca-enable=$dca_enable --dca-listen=$dca_listen --dca-white-list=$dca_white_list --confd-backend='${confd_backend}' --confd-basic-auth='${confd_basic_auth}' --confd-client-ca-keys='${confd_client_ca_keys}' --confd-client-cert='${confd_client_cert}' --confd-client-key='${confd_client_key}' --confd-backend-nodes='${confd_backend_nodes}' --confd-password='${confd_password}' --confd-scheme='${confd_scheme}' --confd-separator='${confd_separator}' --confd-username='${confd_username}'  --confd-access-key='${confd_access_key}' --confd-secret-key='${confd_secret_key}' --confd-circle-interval='${confd_circle_interval}' --confd-confd-namespace='${confd_confd_namespace}' --confd-pipeline-namespace='${confd_pipeline_namespace}' --confd-region='${confd_region}' --git-url='${git_url}' --git-key-path='${git_key_path}' --git-key-pw='${git_key_pw}' --git-branch='${git_branch}' --git-pull-interval='${git_pull_interval}' --install-only='${install_only}' --enable-election='${enable_election}' --rum-origin-ip-header='${rum_origin_ip_header}' --disable-404page='${disable_404page}' --log-level='${log_level}' --log='${log}' --gin-log='${gin_log}' --ipdb-type='${ipdb_type}' --enable-pprof='${enable_pprof}' --pprof-listen='${pprof_listen}' --sink-metric='${sink_metric}' --sink-network='${sink_network}' --sink-keyevent='${sink_keyevent}' --sink-object='${sink_object}' --sink-custom-object='${sink_custom_object}' --sink-logging='${sink_logging}' --sink-tracing='${sink_tracing}' --sink-rum='${sink_rum}' --sink-security='${sink_security}' --sink-profile='${sink_profile}' --log-sink-detail='${log_sink_detail}'"
+	$action = @(
+			"$installer",
+			"--enable-inputs='${def_inputs}'",
+			"--install-log='${install_log}'",                          
+			"--dataway='${dataway}'",
+			"--listen=${http_listen}",
+			"--installer_base_url='${installer_base_url}'",
+			"--port=${http_port}",
+			"--proxy='${proxy}'",
+			"--namespace='${namespace}'",
+			"--env_hostname='${env_hostname}'",
+			"--cloud-provider='${cloud_provider}'",
+			"--global-host-tags='${global_host_tags}'",
+			"--global-election-tags='${global_election_tags}'",
+			"--dca-enable='${dca_enable}'",
+			"--dca-listen='${dca_listen}'",
+			"--dca-white-list='${dca_white_list}'",
+			"--confd-backend='${confd_backend}'",
+			"--confd-basic-auth='${confd_basic_auth}'",
+			"--confd-client-ca-keys='${confd_client_ca_keys}'",
+			"--confd-client-cert='${confd_client_cert}'",
+			"--confd-client-key='${confd_client_key}'",
+			"--confd-backend-nodes='${confd_backend_nodes}'",
+			"--confd-password='${confd_password}'",
+			"--confd-scheme='${confd_scheme}'",
+			"--confd-separator='${confd_separator}'",
+			"--confd-username='${confd_username}'", 
+			"--confd-access-key='${confd_access_key}'",
+			"--confd-secret-key='${confd_secret_key}'",
+			"--confd-circle-interval='${confd_circle_interval}'",
+			"--confd-confd-namespace='${confd_confd_namespace}'",
+			"--confd-pipeline-namespace='${confd_pipeline_namespace}'",
+			"--confd-region='${confd_region}'",
+			"--git-url='${git_url}'",
+			"--git-key-path='${git_key_path}'",
+			"--git-key-pw='${git_key_pw}'",
+			"--git-branch='${git_branch}'",
+			"--git-pull-interval='${git_pull_interval}'",
+			"--install-only='${install_only}'",
+			"--enable-election='${enable_election}'",
+			"--rum-origin-ip-header='${rum_origin_ip_header}'",
+			"--disable-404page='${disable_404page}'",
+			"--log-level='${log_level}'",
+			"--log='${log}'",
+			"--gin-log='${gin_log}'",
+			"--ipdb-type='${ipdb_type}'",
+			"--enable-pprof='${enable_pprof}'",
+			"--pprof-listen='${pprof_listen}'",
+			"--sink-metric='${sink_metric}'",
+			"--sink-network='${sink_network}'",
+			"--sink-keyevent='${sink_keyevent}'",
+			"--sink-object='${sink_object}'",
+			"--sink-custom-object='${sink_custom_object}'",
+			"--sink-logging='${sink_logging}'",
+			"--sink-tracing='${sink_tracing}'",
+			"--sink-rum='${sink_rum}'",
+			"--sink-security='${sink_security}'",
+			"--sink-profile='${sink_profile}'",
+			"--log-sink-detail='${log_sink_detail}'" # Do NOT add trailing `,' here!
+				)
 }
 
 Write-COutput green "action: $action"
-Invoke-Expression $action
+$action -join " " | Invoke-Expression
 
 # remove installer
 Remove-Item -Force -ErrorAction SilentlyContinue $installer
 Remove-Item -Force -ErrorAction SilentlyContinue .\installer.ps1
 
 # clean envs
-$optional_envs="DK_DATAWAY","DK_UPGRADE","HTTP_PROXY","HTTP_PROXY","DK_HTTP_PORT","DK_HOSTNAME","DK_HTTP_LISTEN","DK_INSTALL_ONLY","DK_DCA_ENABLE","DK_DCA_WHITE_LIST","DK_PROXY_TYPE","DK_NGINX_IP","DK_GIT_URL","DK_GIT_KEY_PATH","DK_GIT_KEY_PW","DK_GIT_BRANCH","DK_GIT_INTERVAL","DK_ENABLE_ELECTION","DK_DISABLE_404PAGE","DK_RUM_ORIGIN_IP_HEADER","DK_LOG_LEVEL","DK_LOG","DK_GIN_LOG","DK_INSTALL_IPDB","DK_ENABLE_PPROF","DK_PPROF_LISTEN","DK_SINK_M","DK_SINK_N","DK_SINK_K","DK_SINK_O","DK_SINK_CO","DK_SINK_L","DK_SINK_T","DK_SINK_R","DK_SINK_S","DK_SINK_P","DK_LOG_SINK_DETAIL","DK_INSTALLER_BASE_URL"
+$optional_envs=@(
+		"DK_DATAWAY",
+		"DK_UPGRADE",
+		"HTTP_PROXY",
+		"HTTP_PROXY",
+		"DK_HTTP_PORT",
+		"DK_HOSTNAME",
+		"DK_HTTP_LISTEN",
+		"DK_INSTALL_ONLY",
+		"DK_DCA_ENABLE",
+		"DK_DCA_WHITE_LIST",
+		"DK_PROXY_TYPE",
+		"DK_NGINX_IP",
+		"DK_GIT_URL",
+		"DK_GIT_KEY_PATH",
+		"DK_GIT_KEY_PW",
+		"DK_GIT_BRANCH",
+		"DK_GIT_INTERVAL",
+		"DK_ENABLE_ELECTION",
+		"DK_DISABLE_404PAGE",
+		"DK_RUM_ORIGIN_IP_HEADER",
+		"DK_LOG_LEVEL",
+		"DK_LOG",
+		"DK_GIN_LOG",
+		"DK_INSTALL_IPDB",
+		"DK_ENABLE_PPROF",
+		"DK_PPROF_LISTEN",
+		"DK_SINK_M",
+		"DK_SINK_N",
+		"DK_SINK_K",
+		"DK_SINK_O",
+		"DK_SINK_CO",
+		"DK_SINK_L",
+		"DK_SINK_T",
+		"DK_SINK_R",
+		"DK_SINK_S",
+		"DK_SINK_P",
+		"DK_LOG_SINK_DETAIL",
+		"DK_INSTALLER_BASE_URL"
+		)
 foreach ($env in $optional_envs) {
 	Remove-Item -ErrorAction SilentlyContinue Env:$env
 }
