--- a/charts/datakit/templates/daemonset.yaml
+++ b/charts/datakit/templates/daemonset.yaml
@@ -101,6 +101,7 @@ spec:
               hostPort: 9529
               name: port
               protocol: TCP
+          resources: {{ toYaml .Values.resources | nindent 12 }}
           securityContext:
             privileged: true
           volumeMounts:
