--- a/charts/datakit/templates/rbac.yaml
+++ b/charts/datakit/templates/rbac.yaml
@@ -4,73 +4,26 @@ kind: ClusterRole
 metadata:
   name: {{ include "datakit.fullname" . }}
 rules:
-- apiGroups:
-    - rbac.authorization.k8s.io
-  resources:
-    - clusterroles
-  verbs:
-    - get
-    - list
-    - watch
-- apiGroups:
-    - ""
-  resources:
-    - nodes
-    - nodes/proxy
-    - namespaces
-    - pods
-    - pods/log
-    - events
-    - services
-    - endpoints
-  verbs:
-    - get
-    - list
-    - watch
-- apiGroups:
-    - apps
-  resources:
-    - deployments
-    - daemonsets
-    - statefulsets
-    - replicasets
-  verbs:
-    - get
-    - list
-    - watch
-- apiGroups:
-    - batch
-  resources:
-    - jobs
-    - cronjobs
-  verbs:
-    - get
-    - list
-    - watch
-- apiGroups:
-    - guance.com
-  resources:
-    - datakits
-  verbs:
-    - get
-    - list
-    - watch
-- apiGroups:
-    - monitoring.coreos.com
-  resources:
-    - podmonitors
-    - servicemonitors
-  verbs:
-    - get
-    - list
-    - watch
-- apiGroups:
-    - metrics.k8s.io
-  resources:
-    - pods
-    - nodes
-  verbs:
-    - get
-    - list
-- nonResourceURLs: ["/metrics"]
-  verbs: ["get"]
+  - apiGroups: ["rbac.authorization.k8s.io"]
+    resources: ["clusterroles"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: [""]
+    resources: ["nodes", "nodes/proxy", "namespaces", "pods", "pods/log", "events", "services", "endpoints"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: ["apps"]
+    resources: ["deployments", "daemonsets", "statefulsets", "replicasets"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: ["batch"]
+    resources: ["jobs", "cronjobs"]
+    verbs: [ "get", "list", "watch"]
+  - apiGroups: ["guance.com"]
+    resources: ["datakits"]
+    verbs: ["get","list"]
+  - apiGroups: ["monitoring.coreos.com"]
+    resources: ["podmonitors", "servicemonitors"]
+    verbs: ["get", "list"]
+  - apiGroups: ["metrics.k8s.io"]
+    resources: ["pods", "nodes"]
+    verbs: ["get", "list"]
+  - nonResourceURLs: ["/metrics"]
+    verbs: ["get"]
