--- a/datakit.yaml.template
+++ b/datakit.yaml.template
@@ -184,6 +184,9 @@ spec:
           name: port
           protocol: TCP
         resources:
+          requests:
+            cpu: "200m"
+            memory: "128Mi"
           limits:
             cpu: "2000m"
             memory: "4Gi"
