self config and cpu optimize #1386

--- a/datakit.yaml.template
+++ b/datakit.yaml.template
@@ -109,7 +109,7 @@ spec:
         - name: ENV_GLOBAL_TAGS
           value: host=__datakit_hostname,host_ip=__datakit_ip
         - name: ENV_DEFAULT_ENABLED_INPUTS
-          value: cpu,disk,diskio,mem,swap,system,hostobject,net,host_processes,container
+          value: cpu,disk,diskio,mem,swap,system,hostobject,net,host_processes,container,self
         - name: ENV_ENABLE_ELECTION
           value: enable
         - name: ENV_LOG
