--- a/man/docs/mkdocs.yml
+++ b/man/docs/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: DataKit 文档
 docs_dir: './docs/zh'
+site_dir: './site/zh'
 
 theme:
   palette:
@@ -9,46 +10,64 @@ theme:
   #favicon: assets/images/favicon.ico
   #logo: assets/images/logo.png
   language: zh
+  font:
+    text: Roboto
+    code: Roboto Mono
   features:
+    - content.tabs.link
     - navigation.instant
+    - navigation.top
+    - navigation.tracking
+    - navigation.path
     - search.suggest
     - toc.follow
-    - content.tabs.link
-    - navigation.top
 
 markdown_extensions:
-  tables: {}
-  footnotes: {}
-  attr_list: {}
-  md_in_html: {}
-  toc:
-    permalink: True
-  meta: {}
-  pymdownx.caret: {}
-  pymdownx.mark: {}
-  pymdownx.tilde: {}
-  pymdownx.betterem: {}
-  pymdownx.critic: {}
-  pymdownx.keys: {}
-  pymdownx.snippets: {}
-  pymdownx.details: {}
-  pymdownx.tabbed:
-    alternate_style: true
-  pymdownx.highlight:
-    anchor_linenums: true
-    auto_title: false
-  pymdownx.inlinehilite: {}
-  pymdownx.superfences:
-    custom_fences:
-      - name: mermaid
-        class: mermaid
-        format: !!!!python/name:mermaid2.fence_mermaid
-  pymdownx.emoji:
-    emoji_index: !!python/name:materialx.emoji.twemoji
-    emoji_generator: !!python/name:materialx.emoji.to_svg
-    options:
-      custom_icons:
-        - overrides/.icons
+  - toc:
+      permalink: True
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.caret
+  - pymdownx.mark
+  - pymdownx.tilde
+  - pymdownx.betterem
+  - pymdownx.critic
+  - pymdownx.keys
+  - pymdownx.snippets
+  - pymdownx.details
+  - pymdownx.inlinehilite
+  - tables
+  - footnotes
+  - attr_list
+  - md_in_html
+  - meta
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.highlight:
+      anchor_linenums: true
+      auto_title: false
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+      options:
+        custom_icons:
+          - overrides/.icons
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+
+extra:
+  generator: false
+  homepage: https://localhost:8000/
+  alternate:
+    - name: 中文
+      link: /
+      lang: zh
+    - name: English
+      link: /en/
+      lang: en
 
 plugins:
   awesome-pages: {}
@@ -61,5 +80,5 @@ plugins:
   search:
     separator: '[\s\u200b\-]'
 
-#extra_css:
-#  - assets/stylesheets/extra.css
+extra_css:
+  - assets/stylesheets/extra.css
