--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -4,6 +4,7 @@ project_name: datakit
 before:
   hooks:
     - go mod tidy
+    - go install golang.org/x/tools/cmd/goyacc@master
     - goyacc -l -o io/parser/gram_y.go io/parser/gram.y
 
 env:
