--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -29,7 +29,8 @@ jobs:
           # working-directory: somedir
 
           # Optional: golangci-lint command line arguments.
-          # args: --issues-exit-code=0
+          #args: --issues-exit-code=0
+          args: --fix
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           # only-new-issues: true
