--- a/install.ps1.template
+++ b/install.ps1.template
@@ -219,7 +219,7 @@ if ($x -ne $null) {
 	$dca_enable = $x
 	Write-COutput yellow "* enable DCA server"
 	if ($dca_white_list -eq $null) {
-		Write-COutput red "DCA service is enabled, but white list is not set in DK_DCA_WHITE_LIST!"
+		Write-COutput red "* DCA service is enabled, but white list is not set in DK_DCA_WHITE_LIST!"
 		Exit
 	}
 }
@@ -390,7 +390,7 @@ $disable_404page=""
 $x = [Environment]::GetEnvironmentVariable("DK_DISABLE_404PAGE")
 if ($x -ne $null) {
 	$disable_404page = $x
-	Write-COutput yellow "* set disable 404 page"
+	Write-COutput yellow "* set 404 page disabled"
 }
 
 $rum_origin_ip_header=""
@@ -449,7 +449,7 @@ $installer=".dk-installer.exe"
 ##########################
 # try install...
 ##########################
-Write-COutput green "* Downloading $installer_url..."
+Write-COutput green "* downloading $installer_url..."
 
 if (Test-Path $installer) {
 	Remove-Item $installer
@@ -527,53 +527,9 @@ if ($upgrade -ne $null) { # upgrade
 				)
 }
 
-Write-COutput green "action: $action"
+Write-COutput green "* action: $action"
 $action -join " " | Invoke-Expression
 
-# remove installer
+# remove installer and the script.
 Remove-Item -Force -ErrorAction SilentlyContinue $installer
-Remove-Item -Force -ErrorAction SilentlyContinue .\installer.ps1
-
-# clean envs
-$optional_envs=@(
-		"DK_DATAWAY",
-		"DK_UPGRADE",
-		"HTTP_PROXY",
-		"HTTP_PROXY",
-		"DK_HTTP_PORT",
-		"DK_HOSTNAME",
-		"DK_HTTP_LISTEN",
-		"DK_INSTALL_ONLY",
-		"DK_DCA_ENABLE",
-		"DK_DCA_WHITE_LIST",
-		"DK_PROXY_TYPE",
-		"DK_NGINX_IP",
-		"DK_GIT_URL",
-		"DK_GIT_KEY_PATH",
-		"DK_GIT_KEY_PW",
-		"DK_GIT_BRANCH",
-		"DK_GIT_INTERVAL",
-		"DK_ENABLE_ELECTION",
-		"DK_DISABLE_404PAGE",
-		"DK_RUM_ORIGIN_IP_HEADER",
-		"DK_LOG_LEVEL",
-		"DK_LOG",
-		"DK_GIN_LOG",
-		"DK_INSTALL_IPDB",
-		"DK_ENABLE_PPROF",
-		"DK_PPROF_LISTEN",
-		"DK_SINK_M",
-		"DK_SINK_N",
-		"DK_SINK_K",
-		"DK_SINK_O",
-		"DK_SINK_CO",
-		"DK_SINK_L",
-		"DK_SINK_T",
-		"DK_SINK_R",
-		"DK_SINK_S",
-		"DK_SINK_P",
-		"DK_INSTALLER_BASE_URL"
-		)
-foreach ($env in $optional_envs) {
-	Remove-Item -ErrorAction SilentlyContinue Env:$env
-}
+Remove-Item $PSCommandPath -Force
