--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,18 @@ ci_lint_only:
   tags:
     - cloudcare-ft
 
+ci_ut_only:
+  stage: deploy
+  resource_group: production
+  only:
+    - /^ut-.*$/
+  script:
+    # only run lint
+    - make clean
+    - make ut DATAWAY_URL="$TESTING_METRIC_DATAWAY"
+  tags:
+    - cloudcare-ft
+
 test-datakit-production:
   stage: test
   resource_group: production
@@ -56,7 +68,6 @@ test-datakit-testing:
     - make clean
     - make testing_notify GIT_BRANCH=$CI_COMMIT_BRANCH
     - make lint_nofix
-    - make ut DATAWAY_URL="$TESTING_METRIC_DATAWAY"
   tags:
     - cloudcare-ft
 
